--- a/src/Dashboard/Search/search.css
+++ b/src/Dashboard/Search/search.css
@@ -1,28 +1,15 @@
-/* .search-bar {
-	display: flex;
-	align-items: center;
-	width: 100%;
-	height: 40px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
- }
- 
- .search-bar .search-icon {
-	width: 20px;
-	height: 20px;
-	margin-right: 10px;
- }
- 
- .search-bar .search-input {
-	width: 100%;
-	height: 100%;
-	border: none;
-	outline: none;
- }
-  */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-/* 
-  .border:{
-	width: 50px;
-	background-color: aqua;
-  } */
+/* #container-div{
+ padding-left: 60rem;
+ } */
+ #container-div {
+	position: absolute;
+	/* right: 0;
+	top: 0; */
+	/* left 60; */
+	margin-left: 60rem;
+	border-radius: 1rem;
+ }
